gccida/g2/output_loc_operands
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_loc_operands/src/dwarf2out.c:3243:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 2778, "output_loc_operands"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_loc_operands/src/dwarf2out.c:3290:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 2789, "output_loc_operands"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_loc_operands/src/obj/dwarf2out.o] Error 1
